apps/nginx/manifests/base/nginx-deployment-template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-server-template
  labels:
    app.kubernetes.io/name: nginx-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-server-template
  template:
    metadata:
      labels:
        app: nginx-server-template
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/nginx-custom.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config-template
