apps/nginx/manifests/base/nginx-service-template.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-template # This is the generic name to be patched
spec:
  selector:
    app: nginx-server-template
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
